<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/homeicon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_third"
        android:icon="@drawable/alphaicon"
        android:title="@string/title_ara" />

    <item
        android:id="@+id/navigation_fourth"
        android:icon="@drawable/betaicon"
        android:title="@string/title_falco" />
    <item
        android:id="@+id/navigation_fifth"
        android:icon="@drawable/gammaicon"
        android:title="@string/title_pelecanus" />

    <item
        android:id="@+id/navigation_sixth"
        android:icon="@drawable/muicon"
        android:title="@string/title_noctua" />

</menu>