<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.chooseyouowncocktail_g2.ui.home.HomeFragment"
        android:label="@string/title_welcome"
        tools:layout="@layout/fragment_home">
        <action
          android:id="@+id/to_second"
          app:destination="@id/navigation_second"/>
        <action
            android:id="@+id/to_seventh"
            app:destination="@id/navigation_seventh">

        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_third"
        android:name="com.example.chooseyouowncocktail_g2.ui.fragment.ThirdFragment"
        android:label="@string/title_ara"
        tools:layout="@layout/fragment_third" />
    <fragment
        android:id="@+id/navigation_fourth"
        android:name="com.example.chooseyouowncocktail_g2.ui.fragment.FourthFragment"
        android:label="@string/title_falco"
        tools:layout="@layout/fragment_fourth" />
    <fragment
        android:id="@+id/navigation_fifth"
        android:name="com.example.chooseyouowncocktail_g2.ui.fragment.FifthFragment"
        android:label="@string/title_pelecanus"
        tools:layout="@layout/fragment_fifth" />

    <fragment
        android:id="@+id/navigation_sixth"
        android:name="com.example.chooseyouowncocktail_g2.ui.fragment.SixthFragment"
        android:label="@string/title_noctua"
        tools:layout="@layout/fragment_sixth" />
    <fragment
        android:id="@+id/navigation_second"
        android:name="com.example.chooseyouowncocktail_g2.ui.fragment.SecondFragment"
        android:label="DetailDrinkFragment"
        tools:layout="@layout/fragment_second">
        <action
          android:id="@+id/to_home"
          app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_seventh"
        android:name="com.example.chooseyouowncocktail_g2.ui.fragment.SeventhFragment"
        android:label="@string/test_label"
        tools:layout="@layout/fragment_seventh"/>
        <action
          android:id="@+id/to_eighth"
          app:destination="@id/navigation_eighth"/>
        <action
          android:id="@+id/to_home"
          app:destination="@id/navigation_home"
          tools:ignore="DuplicateIds" />
    <fragment
        android:id="@+id/navigation_eighth"
        android:name="com.example.chooseyouowncocktail_g2.ui.fragment.EighthFragment"
        android:label="@string/test_label"
        tools:layout="@layout/fragment_ninth"/>
        <action
           android:id="@+id/to_ninth"
           app:destination="@id/navigation_ninth"/>
        <action
           android:id="@+id/to_home"
           app:destination="@id/navigation_home"
           tools:ignore="DuplicateIds" />
    <fragment
        android:id="@+id/navigation_ninth"
        android:name="com.example.chooseyouowncocktail_g2.ui.fragment.NinthFragment"
        android:label="@string/title_noctua"
        tools:layout="@layout/fragment_sixth"/>
        <action
          android:id="@+id/to_next"
          app:destination="@id/navigation_home"
          tools:ignore="DuplicateIds" />
    <fragment
        android:id="@+id/navigation_tenth"
        android:name="com.example.chooseyouowncocktail_g2.ui.fragment.TenthFragment"
        android:label="@string/title_noctua"
        tools:layout="@layout/fragment_tenth"/>
        <action
          android:id="@+id/to_next"
          app:destination="@id/navigation_home"
          tools:ignore="DuplicateIds" />




</navigation>